fix(export): align collapsed format selector

--- a/src/pages/ExportPage.scss
+++ b/src/pages/ExportPage.scss
@@ -2861,6 +2861,7 @@
 .dialog-format-select {
   position: relative;
   min-width: 220px;
+  margin-left: auto;
 }
 
 .dialog-format-dropdown {
